# app/Models/CollectControl.php
@@ -12,7 +12,7 @@ class CollectControl extends Model implements Auditable
     protected $table = 'collect_control';
 
     protected $fillable = [
-        'id', 'in_community_id', 'status_id', 'address', 'province', 'state', 'country', 'cp'
+        'id', 'in_community_id', 'status_id', 'address', 'province', 'state', 'country', 'cp', 'address_description'
     ];
 
     public function InCommunity() {
